tests/sema/fail/v3_fail_return_type.ep
# COMPILE_FAIL: return expected str, got i64

fun bad(): str {
    ret 1
}

fun main(): void {
}
